# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
page_analyzer/: app.py  seo_data_parser.py  url.py
page_analyzer/templates/: index.html  url.html  urls_list.html
