[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Page analyzer is a simple web-app getting website base SEO characteristics"
authors = ["Elenlith <mishchenkov@list.ru>"]
readme = "README.md"
repository = "https://github.com/Elenlith/python-project-83.git"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Free For Home Use",
    "Operating System :: Unix",
]
packages = [{include = "page_analyzer"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
flask = "^2.2.3"
gunicorn = "^20.1.0"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.5"
validators = "^0.20.0"
requests = "^2.28.2"
beautifulsoup4 = "^4.12.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
